--- a/index.html
+++ b/index.html
@@ -24,6 +24,17 @@
         <h3>my fourth love</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti tenetur voluptas excepturi provident adipisci voluptates, perspiciatis et veniam fuga nesciunt facere aliquid? Aliquam facilis consectetur voluptate quasi itaque, soluta corporis.</p>
     </div>
-    
+    <div>
+        <h3>The Dark Knight</h3>
+        <img src="images/Batman.jpeg" alt="">
+    </div>
+    <div>
+        <h3>My image</h3>
+        <img src="images/FB_IMG_1664194834872.jpg" alt="">
+    </div>
+    <div>
+        <h3>My friends</h3>
+        <img src="images/SAVE_20240712_202143.jpg" alt="">
+    </div>
 </body>
 </html>
