--- a/index.html
+++ b/index.html
@@ -36,5 +36,7 @@
         <h3>My friends</h3>
         <img src="images/SAVE_20240712_202143.jpg" alt="">
     </div>
+    <br>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid sapiente laudantium unde nam perspiciatis neque, at quo nulla necessitatibus impedit, facilis sit consequuntur quia eligendi, possimus sunt tempora beatae voluptate?</p>
 </body>
 </html>
